# VibeNanoChat

./: .env.template  .gitignore  CLAUDE.md  KV_CACHE_README.md  Makefile  README.md  README_INTENT_DISCOVERY.md  pyproject.toml  train_with_intent.py  visualize_embeddings.ipynb
chat_ui/: README.md  __init__.py  asgi.py  config.py  gunicorn_config.py  index.html  model_manager.py  nanogpt-chat.service  prompt_utils.py  server.py  session_manager.py  vibenanachat.service  vibenanochat-chat.service
data/: prepare_token_bytes.py
data/fineweb_edu/: prepare.py  prepare_parquet.py
data/heallaswag/: prepare.py
data/openwebtext/: prepare.py
data/task_mixture/: prepare.py
debug_tools/: calc_params.py  check_token_ids.py  demo_kvcache_speedup.py  inspect_checkpoint.py  interactive_generate.py  test_chatcore_kvcache.py  test_flops_calculation.py  test_generate_kvcache.py
docs/: DEPTH_PARAMETERIZATION.md  FLOPS_AND_ITERATIONS_IMPLEMENTATION.md  MILLION_TOKENS_PER_SECOND.md  NANOCHAT_MISSING_FEATURES_COMPLETE_GUIDE.md  PER_LAYER_SCALARS_GUIDE.md  README-PREFETCHING-OPTIMIZATION.md  README_CHATCORE_EVALUATOR.md  README_DISTMUON.md  README_FLOPS_AND_ITERATIONS.md  README_MULTIPLEX.md  README_MUON.md  README_OPTIMIZATION.md  README_RL.md  README_ROPE.md  README_STABILITY.md  README_VLM_GUIDE.md  SFT_DELTA_REPORT.md  SLIDING_WINDOW_ATTENTION.md  VALUE_EMBEDDINGS_IMPLEMENTATION.md  VLM_GUIDE.md  gen_diagram.py  training_pipeline.excalidraw
scripts/: chat.py  eval_checkpoints.py  keep_gpus_hot.py  plot_isoflop_curve.py  plot_scaling_laws.py  plot_training_time.py  show_alpha_calculation.py  verify_flops_formula.py  verify_scaling_constant.py
src/dataloaders/: __init__.py  arc_dataloader.py  fineweb_edu_dataloader.py  fineweb_edu_parquet_bos_dataloader.py  gsm8k_dataloader.py  humaneval_dataloader.py  mmlu_dataloader.py  multiplex_dataloader.py  open_webtext_dataloader.py  simplespelling_dataloader.py  smoltalk_dataloader.py  spellingbee_dataloader.py  task_mixture_dataloader.py  word_utils.py
src/eval_tasks/: __init__.py
src/gpt_2/: attention.py  block.py  config.py  dataloader.py  ddp.py  evaluator.py  fineweb_edu_dataloader.py  gpt2.ipynb  gpt2_model.py  hellaswag_dataloader.py  kv_cache.py  mlp.py  muon.py  open_webtext_dataloader.py  rope.py  sample_contexts.py  trainer.py  (+1 more)
tests/: __init__.py  conftest.py  run_tests.sh
wiki/: SCHEMA.md  architecture.md  chat-ui.md  data.md  evaluation.md  index.md  log.md  model.md  scaling-laws.md  training.md
(+43 files in other folders)
