[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src", "src/gpt2"]

[project]
name = "nanogpt"
version = "0.1.0"
description = "A PyTorch-based implementation of NanoGPT for training and inference."
authors = [
    { name = "Divyanshu Goyal", email = "divyanshu.g25@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
   "datasets>=3.2.0",
   "ipykernel>=6.29.5",
   "tiktoken>=0.9.0",
   "torch>=2.7.1",
   "tqdm>=4.66.0",
   "transformers>=4.53.2",
   "wandb>=0.21.0",
   "fastapi>=0.104.0",
   "uvicorn>=0.24.0",
   "gunicorn>=21.0.0",
]

[dependency-groups]
dev = [
    "ruff",   # For linting and formatting
    "pytest", # For running tests
    "wandb",  # For experiment tracking,
    "black",
    "types-torch",  # PyTorch type stubs
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff.lint]
# Ignore E402 errors globally (module level import not at top)
# These are intentional due to sys.path.append before imports
ignore = ["E402"]
